# fast-alpr-rs

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
models/: cct_xs_relu_v1_global.onnx  recognition_indonesia_tiny.onnx  yolo-v9-t-416-license-plates-end2end1.onnx
src/: alpr.rs  api.rs  config.rs  detector.rs  error.rs  lib.rs  main.rs  postprocessor.rs  preprocessor.rs  recognizer.rs  types.rs
